--- a/package.xml
+++ b/package.xml
@@ -49,6 +49,10 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>pimouse_ros</build_depend>
+  <build_depend>gmapping</build_depend>
+  <exec_depend>pimouse_ros</exec_depend>
+  <exec_depend>gmapping</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
